# wg-node

./: .env.example  .gitignore  404.html  Dockerfile  LICENSE  README.md  README.txt  docker-compose.yaml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml
api/clients/: index.html
api/introduction/: index.html
api/methods/: index.html
app/: config.py  main.py
app/database/: __init__.py  init.py  peers.py
app/models/: __init__.py  peer.py
app/routers/: index.py  peer.py
app/wireguard/: __init__.py  key_storage.py  keys.py  wireguard_config.py
docs/: conf.py  index.md  index.rst  project-structure-and-architecture.md  quickstart.md
docs/api/: clients.md  introduction.md  methods.md
docs/api-reference/: api-methods.md  introduction.md  sending-api-request.md
docs/usage/: manage-your-wg-node-instance.md  run-wg-node-on-your-machine.md  run-wg-node-on-your-server.md  set-up-wg-node-on-your-server.md
project-structure-and-architecture/: index.html
search/: search_index.json
usage/manage-your-wg-node-instance/: index.html
usage/run-wg-node-on-your-server/: index.html
usage/set-up-wg-node-on-your-server/: index.html
wg_node/: config.py  database.py  docker_secrets.py  env.py  init.py  main.py  util.py
wg_node/database/: __init__.py  client.py  init.py  peer.py
wg_node/http/: dependencies.py
wg_node/http/routers/: api_user.py  client.py  node.py  peer.py
wg_node/wireguard/: key.py  key_storage.py  wireguard_config.py  wireguard_daemon.py
