[project]
name = ""
version = ""
description = ""
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "beanie>=1.19.0",
    "betterconf>=2.6.1",
    "loguru>=0.7.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
]

[tool.pdm.scripts]
fmt.shell = "isort ./app/ && black ./app/"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
