[project]
name = "wg_node"
version = "0.1.0"
description = ""
authors = [
    {name = "jieggii", email = "jieggii@protonmail.com"},
]
dependencies = [
    "fastapi>=0.95.1",
    "beanie>=1.19.0",
    "betterconf>=2.6.1",
    "loguru>=0.7.0",
    "aiofile>=3.8.5",
    "uvicorn[standard]>=0.22.0",
    "rsa>=4.9",
    "furo>=2023.5.20",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.3.0",
    "mkdocs>=1.4.3",
    "mkdocs-terminal>=4.4.0",
]

[tool.pdm.scripts]
fmt.shell = "isort ./wg_node/ && black ./wg_node/"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
